View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031258 | Community | OCCT:Mesh | public | 2019-12-22 07:00 | 2020-12-02 17:12 |
Reporter | hwliu11 | Assigned To | bugmaster | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Platform | Intel X86 | OS | Windows | ||
Product Version | 7.4.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031258: Mesh - OCCT 7.4.0 VIS get wrong render data | ||||
Description | My file is a face as below,in OCCT 7.3 Draw Test Harness,it render right.But int 7.4.0,don't get right render data. The issue information may be wrong,I cant select OCCT 7.4.0 and VS2014 64 bit | ||||
Steps To Reproduce | pload VIS restore 1.brep 1 vinit vdisplay 1 | ||||
Tags | No tags attached. | ||||
Test case number | bugs/mesh/bug31258 | ||||
|
1.brep (2,042 bytes) |
|
1_730_OK.png (12,325 bytes) |
|
1_740_KO.png (4,674 bytes) |
|
Branch CR31258 has been created by oan. SHA-1: 008cc5f6c2595352d031bbb125176dea3808f280 Detailed log of new commits: Author: oan Date: Tue Jan 21 13:21:38 2020 +0300 0031258: Mesh - OCCT 7.4.0 VIS get wrong render data Check intervals for infinite value causing exception in GeomLib::NormEstim |
|
The bug is caused by exception in GeomLib::NormEstim due to infinite value returned by CN intervals. |
|
Branch CR31258 has been updated forcibly by oan. SHA-1: 6ce3bc7b7204db96980297837e1e457f1b27273d |
|
Please review: http://jenkins-test-12.nnov.opencascade.com/view/CR31258-master-OAN/view/COMPARE/ |
|
Combination - OCCT branch : WEEK-4 master SHA - 6216ed573eba2e021c05ae79b13de3404ae2633d fe4497f3246e6bc1ced97ac331c148f0809ded15 Products branch : WEEK-4 SHA - 78d1418219e11e1effe871d7f2886b736d7b8bdf was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16995.39000000029 / 17005.860000000113 [-0.06%] Products Total CPU difference: 12132.210000000103 / 10725.040000000088 [+13.12%] Windows-64-VC14: OCCT Total CPU difference: 18437.984375 / 18453.859375 [-0.09%] Products Total CPU difference: 14113.03125 / 12655.59375 [+11.52%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31258 has been deleted by inv. SHA-1: 6ce3bc7b7204db96980297837e1e457f1b27273d |
occt: master 973f7d55 2020-01-21 10:21:38 Committer: bugmaster Details Diff |
0031258: Mesh - OCCT 7.4.0 VIS get wrong render data Check intervals for infinite value causing exception in GeomLib::NormEstim |
Affected Issues 0031258 |
|
mod - src/BRepMesh/BRepMesh_NURBSRangeSplitter.cxx | Diff File | ||
add - tests/bugs/mesh/bug31258 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-12-22 07:00 | hwliu11 | New Issue | |
2019-12-22 07:00 | hwliu11 | Assigned To | => ssv |
2019-12-22 07:00 | hwliu11 | File Added: 1.brep | |
2019-12-31 10:58 | kgv | File Added: 1_730_OK.png | |
2019-12-31 10:58 | kgv | File Added: 1_740_KO.png | |
2019-12-31 10:58 | kgv | Assigned To | ssv => oan |
2019-12-31 10:58 | kgv | Category | OCCT:VIS => OCCT:Mesh |
2019-12-31 10:58 | kgv | Summary | OCCT 7.4.0 VIS get wrong render data => Mesh - OCCT 7.4.0 VIS get wrong render data |
2019-12-31 10:59 | kgv | Product Version | => 7.4.0 |
2019-12-31 10:59 | kgv | Target Version | => 7.5.0 |
2020-01-21 13:40 | git | Note Added: 0089978 | |
2020-01-21 13:45 | oan | Note Added: 0089979 | |
2020-01-21 15:23 | git | Note Added: 0089984 | |
2020-01-21 15:44 | oan | Note Added: 0089985 | |
2020-01-21 15:44 | oan | Assigned To | oan => msv |
2020-01-21 15:44 | oan | Status | new => resolved |
2020-01-22 09:31 | msv | Assigned To | msv => bugmaster |
2020-01-22 09:31 | msv | Status | resolved => reviewed |
2020-01-24 17:00 | bugmaster | Note Added: 0090054 | |
2020-01-24 17:01 | bugmaster | Test case number | => bugs/mesh/bug31258 |
2020-01-24 17:01 | bugmaster | Status | reviewed => tested |
2020-01-25 13:09 | bugmaster | Changeset attached | => occt master 973f7d55 |
2020-01-25 13:09 | bugmaster | Status | tested => verified |
2020-01-25 13:09 | bugmaster | Resolution | open => fixed |
2020-01-25 13:26 | git | Note Added: 0090061 | |
2020-12-02 16:41 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |