0031258: Mesh - OCCT 7.4.0 VIS get wrong render data

Check intervals for infinite value causing exception in GeomLib::NormEstim